erDiagram
    USERS ||--o{ ORDERS : places
    USERS ||--o{ ADDRESSES : owns
    CATEGORIES ||--o{ PRODUCTS : categorizes
    CATEGORIES ||--o{ CATEGORIES : parent_child
    COLLECTIONS ||--o{ PRODUCTS : groups
    PRODUCTS ||--o{ PRODUCT_VARIANTS : has
    PRODUCTS ||--o{ PRODUCT_IMAGES : contains
    ORDERS ||--o{ ORDER_ITEMS : consists_of
    ADDRESSES ||--o{ ORDERS : ships_to

    USERS {
        uuid id PK
        string email
        string password_hash
        string role
    }

    PRODUCTS {
        uuid id PK
        uuid category_id FK
        uuid collection_id FK
        string title
        string slug
        decimal base_price
        string hsn_code
    }

    PRODUCT_VARIANTS {
        uuid id PK
        uuid product_id FK
        string sku
        string material
        int stock_quantity
    }

    ORDERS {
        uuid id PK
        string order_number
        string status
        decimal grand_total
    }
